--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=4001
+GOOGLE_PASS="uila digk xswk hbsc"
+SEKRET_KEY=Ahifodsafouy44389702534orhnbf9fh089374y
+REFRESH_SEKRET_KEY=asdjoifheiuwoq9854398hf98ew0qyh9fy034r
 MONGO_URI=mongodb+srv://gulimovjalol1999_db_user:qxTB5c65T6pqcr1f@cluster0.yynjc88.mongodb.net/?appName=Cluster0
